# fastapi

./: LICENSE  README.md  build.sh  main.py  pyproject.toml  recover.py  requirements.txt  run.sh  scp.sh  start.sh  test.py  xxx.py
api/: __init__.py  authority.py  encapsulation.py  mock.py  scheduler.py
api/authentication/: __init__.py  jwt_func.py
api/kafka/: kafka.py  main.py
api/v1/: hello_world.py
common/: __init__.py  logger.py
common/args/: args.py  comm_args.py  v1_args.py
common/database/: db_mysql.py  db_neo4j.py  db_pyneo4j.py  db_redis.py  db_sqlit3.py
common/tools/: global_var.py  post.py  request.py  tools.py
core/: __init__.py  server.py
core/config/: common_config.py  development_config.py  env_config.py  production_config.py
draft/: draft.py
local_db/: sqlite3.db
port/: call.py  call2.py
router/: router.py
schemas/response/: response_code.py
temp/: temp.db
