[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = "Asdil's fastapi template"
authors = ["Asdil <jpl4job@126.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
